RESOLVED FIXED113069
[BlackBerry] Selection overlay clipped incorrectly
https://bugs.webkit.org/show_bug.cgi?id=113069
Summary [BlackBerry] Selection overlay clipped incorrectly
Andrew Lo
Reported 2013-03-22 09:06:17 PDT
As a follow-up to http://trac.webkit.org/changeset/146278, we also need to adjust the clip rect by offsetFromRenderer when drawing the text selection overlay.
Attachments
Patch (2.29 KB, patch)
2013-03-22 09:17 PDT, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-03-22 09:17:48 PDT
WebKit Review Bot
Comment 2 2013-03-22 10:14:18 PDT
Comment on attachment 194565 [details] Patch Clearing flags on attachment: 194565 Committed r146627: <http://trac.webkit.org/changeset/146627>
WebKit Review Bot
Comment 3 2013-03-22 10:14:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.