[BlackBerry] Selection overlay clipped incorrectly https://bugs.webkit.org/show_bug.cgi?id=113069

Patch by Andrew Lo <anlo@rim.com> on 2013-03-22
Reviewed by George Staikos.
Internally reviewed by Arvid Nilsson.

As a follow-up to r146278, the clip rect also needs to be
adjusted by the parent's offset when drawing the
selection overlay.

* WebKitSupport/SelectionOverlay.cpp:
(BlackBerry::WebKit::SelectionOverlay::paintContents):

Canonical link: https://commits.webkit.org/131403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146627 268f45cc-cd09-0410-ab3c-d52691b4dbfc